[package]
name = "ransac-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdtree = "0.7.0"
rand = "0.8.5"
pcd-rs={version = "0.10.0", features = ["derive"]}
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }